Bootstrap this image so it pushes itself

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,11 +3,11 @@ pipeline:
     image: docker
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
     commands:
-      - docker build --no-cache --pull -t test-image .
+      # Pre-tag this image as to bootstrap itself (how meta..)
+      - docker build --no-cache --pull -t spritsail/docker-publish:latest .
 
   publish:
     image: spritsail/docker-publish
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
     secrets: [ DOCKER_USERNAME, DOCKER_PASSWORD ]
-    from: test-image
     repo: spritsail/docker-publish
