drone: remove notify step
Signed-off-by: Joe Groocock <me@frebib.net>

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,33 +18,16 @@ steps:
   image: spritsail/docker-publish
   settings:
     repo: spritsail/docker-publish
-  environment:
-    DOCKER_PASSWORD:
-      from_secret: docker_password
-    DOCKER_USERNAME:
-      from_secret: docker_username
+    username: {from_secret: docker_username}
+    password: {from_secret: docker_password}
   when:
     branch:
     - master
     event:
     - push
-    - tag
-
-- name: notify
-  pull: always
-  image: spritsail/notify
-  environment:
-    NOTIFY_TOKEN:
-      from_secret: notify_token
-    WEBHOOK_URL:
-      from_secret: webhook_url
-  when:
-    status:
-    - success
-    - failure
 
 ---
 kind: signature
-hmac: 93b3b09a469b8cc9a965ec9a47a84032b75323e63bfa98c416fd7c872ceae0f7
+hmac: cca014d64d0fb1965a4d65d1802c104f3a40031d04007ce03135399c70f00bcc
 
 ...
